# wican-fw-4.47p_beta-04-j2534

./: sdkconfig  sdkconfig.old
components/debug_logs/include/: debug_logs_config.h
components/j2534/: CMakeLists.txt  README.md  j2534_channel.c  j2534_cmd.c  j2534_core.c  j2534_ioctl.c  j2534_isotp.c  j2534_msg.c  stn_j2534_usdt.c
components/j2534/include/: j2534.h  j2534_internal.h  stn_j2534_usdt.h
components/j2534_driver/: build.bat  register_32bit.reg  uninstall.bat  wican_comm.c  wican_j2534.reg
components/vpn_manager/: vpn_wireguard.h
docs/: J2534_CHANGES.md
j2534_driver_win32/: README.md  build_mingw.bat  build_msvc.bat  fix_wican_j2534_registry.reg  install.bat  j2534_api.h  register_driver.reg  wican_comm.c  wican_comm.h  wican_config.c  wican_j2534.c  wican_j2534.def
main/: CMakeLists.txt  can.c  can.h  comm_server.c  config_server.c  config_server.h  elm327.c  elm327.h  j2534.c.old  j2534.h  main.c  stn_j2534.c  stn_j2534.h  stn_j2534_usdt.c  stn_j2534_usdt.h  types.h
main/web/: homepage_full.html
main/web/src/: homepage.html
tools/j2534_driver/: CMakeLists.txt  j2534_api.h  j2534_debug_test.c  j2534_test.c  wican_comm.c  wican_comm.h  wican_j2534.c
